Added dependency on Apache Commons HTTPComponents